src/objects/GDP_Delta__c.object
<CustomObject>
    <description>This is a junction object between GDP_FileDescription and FileSpecification.From_Clause__c Object type. 
(usually but not restricted to GDP_Products_Account_View__c)
Records in this objects holds the date of the last modification related to the FileSpecification
Records in this object holds the nature of the modification ( A=Added, C=Changed or D=Deleted)</description>
    <fields>
        <fullName>CNS_Agency__c</fullName>
        <formula>Related_GDP_Product_Account_View__r.CNS_Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows if related GDP Account is CNS</inlineHelpText>
        <label>CNS_Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Code__c</fullName>
        <description>A=Added, C=Changed or D=Deleted</description>
        <inlineHelpText>A=Added, C=Changed or D=Deleted</inlineHelpText>
        <label>Change Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeltaLastModifiedDate__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Date time when one of the fields refered in the File definition was modified
(note that this can be a date prior to the RecordId system lastmodifiedDate if the modification is on a field not related to the File definition)</description>
        <inlineHelpText>Date time when one of the fields refered in the File definition was modified</inlineHelpText>
        <label>DeltaLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDP_File_Description__c</fullName>
        <description>File Description (Reference only)</description>
        <inlineHelpText>File Description (Reference only)</inlineHelpText>
        <label>GDP File Description</label>
        <referenceTo>GDP_File_Description__c</referenceTo>
        <relationshipLabel>GDP_Delta</relationshipLabel>
        <relationshipName>GDP_Delta</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_GDP_Product_Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related GDP Products - Account View</description>
        <label>GDP Product Account View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>GDP_Delta</relationshipLabel>
        <relationshipName>GDP_Delta</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GDP_Delta</label>
    <listViews>
        <fullName>Additions</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>03-All Additions (RecID &quot;A&quot;)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>00-All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_TODAY</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeltaLastModifiedDate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>01-All Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_TODAY_1</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeltaLastModifiedDate__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>02-All Yesterday</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Changes</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>05-All Changes (RecID &quot;C&quot;)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reinstatements</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>B</value>
        </filters>
        <label>04-All Reinstatements (RecID &quot;B&quot;)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X01_Searcg_by_GDP_Product_Account_View</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_GDP_Product_Account_View__c</field>
            <operation>equals</operation>
            <value>FLIGHT CENTRE TRAVEL GROUP LIMITED</value>
        </filters>
        <label>YY - Search by GDP Product Account View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X06_All_Terminations_RecID_D</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>06-All Terminations (RecID &quot;D&quot;)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X07_Reference_GSS_Member_NewGen</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GDP_File_Description__c</field>
            <operation>equals</operation>
            <value>Reference - GSS Member NewGen</value>
        </filters>
        <label>08 - Reference - GSS Member NewGen</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X08_Reference_Reference_GSS_Member</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GDP_File_Description__c</field>
            <operation>equals</operation>
            <value>Reference - GSS Member</value>
        </filters>
        <label>07 - Reference - GSS Member</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X09_Reference_GSS_Non_Member</fullName>
        <columns>NAME</columns>
        <columns>Related_GDP_Product_Account_View__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>DeltaLastModifiedDate__c</columns>
        <columns>Change_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GDP_File_Description__c</field>
            <operation>equals</operation>
            <value>Reference - GSS Non Member</value>
        </filters>
        <label>09 - Reference - GSS Non Member</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GDP-Delta-{0000000}</displayFormat>
        <label>GD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDP_Delta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>